#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- new shell command =my-size-all= for summarising sizes of
  files and directories in current directory

** Fixed

- =my-projectile-grep= no longer fails when grepping in a
  non-project directory (searches in current directory
  instead)

* 0.11.0 - 2020-05-06

** Added

- =grepcount= command for searching files and organising
  result on number of matches

- =greptxt= and =greptext= aliases for searching =.txt= files
  and organising results on number of matches

- =cman= alias for =connmanctl=

- new files
  - =.bash_profile=
  - =okularpartrc=

- =office-monitor-show= and =office-monitor-hide= commands for
  enabling/disabling office monitor

- support for high-priority custom scripts

- support for owncloud sync exclude list

- support for personal environment file

*** Emacs

- add new GTD context tags
  - =@laptop=
  - =@motorbike=
  - =@phone=
  - =@planning=

- agenda view for =Creative [I]maginings=

- automatic spell-checking for =org-mode=

- command for prompting for and inserting (org) links with
  descriptions

- configuration for =checkdoc=

- configuration for =org-re-reveal=

- fill-column for =latex-mode=

- fill-column for =markdown-mode=

*** Installer

- command for checking if program is installed (=installed
  NAME=)

- =configure_dev_terminal= recipe

- install configuration for =agda=

- install configuration for =htop=

- install configuration for =ocaml=

- install configuration for =okular=

- install configuration for =perl_local_lib= (=local::lib=)

- install configuration for =slack=

- install configuration for =texlive=

- install configuration for =xrandr=

- we now have a bootstrapper (=install/bootstrap.pl=) for
  setting up the installer

*** Snippets

**** =latex-mode=

- =begin=
- =lists/itemize=
- =math/align-star=
- =proof=
- =sectioning/paragraph=
- =sectioning/section=
- =sectioning/subparagraph=
- =slide=
- =todo-bmi=