@@ -16,6 +16,9 @@
   non-project directory (searches in current directory
   instead)
 
+- various fixes needed to get configuration working with Emacs
+  27
+
 * 0.11.0 - 2020-05-06
 
 ** Added
